[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/start/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/romulus.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/base_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 480 )
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="BaseContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="BaseContainer"]
margin_right = 600.0
margin_bottom = 440.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.662745, 0.192157, 0.188235, 1 )
text = "Space Invaders"
align = 1
uppercase = true

[node name="MainContainer" type="HBoxContainer" parent="BaseContainer"]
margin_right = 600.0
margin_bottom = 440.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="UpdateNewsContainer" type="MarginContainer" parent="BaseContainer/MainContainer"]
margin_right = 194.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="BaseContainer/MainContainer/UpdateNewsContainer"]
margin_right = 194.0
margin_bottom = 440.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.796078, 0.819608, 0.745098, 1 )
custom_colors/font_color_shadow = Color( 0.219608, 0.439216, 0.745098, 1 )
text = "New Stuff!"
valign = 2
autowrap = true

[node name="ButtonContainer" type="VBoxContainer" parent="BaseContainer/MainContainer"]
margin_left = 202.0
margin_right = 397.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 18
alignment = 1

[node name="PlayButton" type="Button" parent="BaseContainer/MainContainer/ButtonContainer"]
margin_top = 129.0
margin_right = 195.0
margin_bottom = 161.0
text = "Play"

[node name="ScoreButton" type="Button" parent="BaseContainer/MainContainer/ButtonContainer"]
margin_top = 179.0
margin_right = 195.0
margin_bottom = 211.0
text = "High Scores"

[node name="SettingsButton" type="Button" parent="BaseContainer/MainContainer/ButtonContainer"]
margin_top = 229.0
margin_right = 195.0
margin_bottom = 261.0
text = "Settings"

[node name="QuitButton" type="Button" parent="BaseContainer/MainContainer/ButtonContainer"]
margin_top = 279.0
margin_right = 195.0
margin_bottom = 311.0
text = "Quit"

[node name="VersionContainer" type="MarginContainer" parent="BaseContainer/MainContainer"]
margin_left = 405.0
margin_right = 600.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="BaseContainer/MainContainer/VersionContainer"]
margin_right = 195.0
margin_bottom = 440.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.796078, 0.819608, 0.745098, 1 )
custom_colors/font_color_shadow = Color( 0.219608, 0.439216, 0.745098, 1 )
text = "v0.2"
align = 2
valign = 2

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="BaseContainer/MainContainer/ButtonContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="BaseContainer/MainContainer/ButtonContainer/ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="pressed" from="BaseContainer/MainContainer/ButtonContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="BaseContainer/MainContainer/ButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
